force-app/main/default/objects/Purchase__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>When the full order arrived</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>