force-app/main/default/objects/Purchase__c/fields/Manufacturer_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Payment_Status__c</fullName>
    <formula>IF(Total_Paid__c = 0, &quot;Unpaid&quot;,
IF(Total_Paid__c &gt;= Total_Order_Cost__c, &quot;Fully Paid&quot;,
&quot;Partially Paid&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturer Payment Status</label>
    <type>Text</type>
</CustomField>