force-app/main/default/objects/Purchase__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any remarks about this order.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>