force-app/main/default/objects/Purchase__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <inlineHelpText>Date when the order was placed</inlineHelpText>
    <label>Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>