force-app/main/default/objects/Purchase__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related To: Account. Label = &quot;Supplier&quot;. Add a Lookup Filter: Account Record Type = Supplier. This ensures only manufacturers show up when selecting.</description>
    <label>Supplier</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchases</relationshipLabel>
    <relationshipName>Purchases</relationshipName>
    <type>Lookup</type>
</CustomField>