force-app/main/default/objects/Purchase__c/fields/Total_Order_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Cost__c</fullName>
    <description>auto-sums every line item&apos;s (Qty × Cost). Updates live whenever a line item is added/edited/deleted.</description>
    <inlineHelpText>auto-sums every line item&apos;s (Qty × Cost). Updates live whenever a line item is added/edited/deleted.</inlineHelpText>
    <label>Total Order Cost</label>
    <summarizedField>Purchase_Line_Item__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Purchase_Line_Item__c.Purchase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>