force-app/main/default/objects/Purchase__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <description>auto-sums every payment made. Every time you log a payment, this updates immediately.</description>
    <inlineHelpText>auto-sums every payment made. Every time you log a payment, this updates immediately.</inlineHelpText>
    <label>Total Paid to Manufacturer</label>
    <summarizedField>Manufacturer_Payment__c.Amount_Paid__c</summarizedField>
    <summaryForeignKey>Manufacturer_Payment__c.Purchase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>