force-app/main/default/objects/Purchase__c/fields/Unique_Order_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_Order_Code__c</fullName>
    <label>Unique Order Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>