force-app/main/default/objects/Purchase__c/recordTypes/Purchase_Creation.recordType-meta.xml
<RecordType>
    <fullName>Purchase_Creation</fullName>
    <active>true</active>
    <description>Fields shows up during record creation</description>
    <label>Purchase Creation</label>
</RecordType>